--- a/test.ini
+++ b/test.ini
@@ -1,5 +1,4 @@
-[default]
-iface = enp3s0 #eth0
+# default stream in global section
 vlanId = 0
 vlanPrio = 0
 appId = 0x4000
@@ -7,7 +6,6 @@ mac = 01:0c:cd:01:00:00
 svId =           # empty
 datSet =         # empty
 confRev = 1
-smpCntWrap = 4000 # ???
 ia_mag = 5
 ia_ang = 0
 ia_q = GOOD
