--- a/test-10.ini
+++ b/test-10.ini
@@ -11,25 +11,25 @@ ia_ang = 0
 ia_q = GOOD
 ib_mag = 5
 ib_ang = 120
-ib_q = GOOD
+ib_q = INVALID
 ic_mag = 5
 ic_ang = 240
-ic_q = GOOD
+ic_q = QUESTIONABLE
 in_mag = 0
 in_ang = 0
 in_q = GOOD,DERIVED
 va_mag = 220
 va_ang = 0
-va_q = GOOD
+va_q = GOOD,TEST
 vb_mag = 220
 vb_ang = 120
-vb_q = GOOD
+vb_q = INVALID,TEST
 vc_mag = 220
 vc_ang = 240
-vc_q = GOOD
+vc_q = QUESTIONABLE,TEST
 vn_mag = 0
 vn_ang = 0
-vn_q = GOOD,DERIVED
+vn_q = GOOD,TEST,DERIVED
 
 [00]
 svId = TestMUnn%s
