--- a/test.ini
+++ b/test.ini
@@ -1,35 +1,36 @@
-# default stream in global section
-vlanId = 0
-vlanPrio = 0
-appId = 0x4000
-mac = 01:0c:cd:01:00:00
-svId =           # empty
-datSet =         # empty
-confRev = 1
-ia_mag = 5
-ia_ang = 0
-ia_q = GOOD
-ib_mag = 5
-ib_ang = 120
-ib_q = GOOD
-ic_mag = 5
-ic_ang = 240
-ic_q = GOOD
-in_mag = 0
-in_ang = 0
-in_q = GOOD,DERIVED
-va_mag = 220
-va_ang = 0
-va_q = GOOD
-vb_mag = 220
-vb_ang = 120
-vb_q = GOOD
-vc_mag = 220
-vc_ang = 240
-vc_q = GOOD
-vn_mag = 0
-vn_ang = 0
-vn_q = GOOD,DERIVED
+# default stream info
+
+mac = 01:0c:cd:01:00:00  # mac 01:0c:cd:01:00:00 - 01:0c:cd:01:01:ff (may contain %s substituted with section name)
+vlanId = 1               # int 0 - 4095
+vlanPrio = 4             # int 0 - 7
+appId = 0x4000           # hex 0x4000 - 0x7fff
+svId =  TestMUnnXX       # str 10-34 chars (may contain %s substituted with section name)
+confRev = 1              # int 0 - 2^32-1
+
+ia_mag = 100             # int 0 - 1000000 (amperes)
+ia_ang = 0               # int 0 - 359 (degrees)
+ia_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
+ib_mag = 100             # int 0 - 1000000 (amperes)
+ib_ang = 120             # int 0 - 359 (degrees)
+ib_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
+ic_mag = 100             # int 0 - 1000000 (amperes)
+ic_ang = 240             # int 0 - 359 (degrees)
+ic_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
+in_mag = 0               # int 0 - 1000000 (amperes)
+in_ang = 0               # int 0 - 359 (degrees)
+in_q = GOOD,DERIVED      # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
+va_mag = 10000           # int 0 - 10000000 (volts)
+va_ang = 0               # int 0 - 359 (degrees)
+va_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
+vb_mag = 10000           # int 0 - 10000000 (volts)
+vb_ang = 120             # int 0 - 359 (degrees)
+vb_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
+vc_mag = 10000           # int 0 - 10000000 (volts)
+vc_ang = 240             # int 0 - 359 (degrees)
+vc_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
+vn_mag = 0               # int 0 - 10000000 (volts)
+vn_ang = 0               # int 0 - 359 (degrees)
+vn_q = GOOD,DERIVED      # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
 
 [00]
 svId = TestMUnn%s
