final touch to test.ini

--- a/test.ini
+++ b/test.ini
@@ -7,29 +7,29 @@ appId = 0x4000           # hex 0x4000 - 0x7fff
 svId =  TestMUnnXX       # str 10-34 chars (may contain %s substituted with section name)
 confRev = 1              # int 0 - 2^32-1
 
-ia_mag = 100             # int 0 - 1000000 (amperes)
-ia_ang = 0               # int 0 - 359 (degrees)
+ia_mag = 100             # int 0 - 1000000 amperes
+ia_ang = 0               # int 0 - 359 degrees
 ia_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
-ib_mag = 100             # int 0 - 1000000 (amperes)
-ib_ang = 120             # int 0 - 359 (degrees)
+ib_mag = 100             # int 0 - 1000000 amperes
+ib_ang = 120             # int 0 - 359 degrees
 ib_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
-ic_mag = 100             # int 0 - 1000000 (amperes)
-ic_ang = 240             # int 0 - 359 (degrees)
+ic_mag = 100             # int 0 - 1000000 amperes
+ic_ang = 240             # int 0 - 359 degrees
 ic_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
-in_mag = 0               # int 0 - 1000000 (amperes)
-in_ang = 0               # int 0 - 359 (degrees)
+in_mag = 0               # int 0 - 1000000 amperes
+in_ang = 0               # int 0 - 359 degrees
 in_q = GOOD,DERIVED      # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
-va_mag = 10000           # int 0 - 10000000 (volts)
-va_ang = 0               # int 0 - 359 (degrees)
+va_mag = 10000           # int 0 - 10000000 volts
+va_ang = 0               # int 0 - 359 degrees
 va_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
-vb_mag = 10000           # int 0 - 10000000 (volts)
-vb_ang = 120             # int 0 - 359 (degrees)
+vb_mag = 10000           # int 0 - 10000000 volts
+vb_ang = 120             # int 0 - 359 degrees
 vb_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
-vc_mag = 10000           # int 0 - 10000000 (volts)
-vc_ang = 240             # int 0 - 359 (degrees)
+vc_mag = 10000           # int 0 - 10000000 volts
+vc_ang = 240             # int 0 - 359 degrees
 vc_q = GOOD              # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
-vn_mag = 0               # int 0 - 10000000 (volts)
-vn_ang = 0               # int 0 - 359 (degrees)
+vn_mag = 0               # int 0 - 10000000 volts
+vn_ang = 0               # int 0 - 359 degrees
 vn_q = GOOD,DERIVED      # enum GOOD INVALID QUESTIONABLE TEST DERIVED (may contain more than one, comma separated)
 
 [00]
